Resumos bimestre - WIP

--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -398,7 +398,7 @@
           }
         }
         [data-aula_categoria="prova"]{
-          background:#acc6ff !important;
+          background:#d8e4fd !important;
           .aula_detalhes{
             height:110px;
           }
