--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -289,13 +289,48 @@
       grid-gap: 1px;
       grid-template-columns: 1fr 1fr 1fr;
       padding:10px;
-
+      .feedback_bimestral{
+        padding:10px;
+      margin-top:10px;
+        grid-column: 1 / 4;
+        min-width:100%;
+        border:1px solid #ccc;
+        display: flex;
+        flex-wrap: wrap;
+        flex: 100% 50% 50%;
+        align-items: center;
+        justify-content: space-between;
+    
+        p{ padding:5px;
+flex-grow: 1;
+        }
+        .btn_add_feedback_bimestral{
+          max-height: 35px;
+          border:1px solid $primary-color;
+          padding: 5px 10px;
+          color:$primary-color;
+          background: #fff;
+          border-radius: 5px;
+          cursor: pointer;
+          margin:  10px 5px;
+          float:right;
+          &:hover{
+            background: #ffe;
+          }
+        }
+      }
+ 
       p{
         width:auto;
         padding:5px;
         box-shadow: 0px 0px 0px 1px #ccc;  
       }
-      span{
+      .label{
+        width:100%;
+        flex-grow: 1;
+        font-size:14px;
+      }
+      span.values{
         font-weight: bold;
       }
         .feedback{
@@ -335,6 +370,7 @@
           .aulas{width:auto; flex-grow:1; flex-shrink: 1;
           max-width: 250px;}
         }
+        
         .aulas {
           position:relative;
           margin:10px;
