--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -480,6 +480,34 @@ dialog {
   color: #fff;
 }
 
+.forms #aluno_nome, .forms #curso_nome, .forms #bimestre_nome {
+  margin-top: 10px;
+  padding: 10px 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  font-weight: bold;
+  width: 50%;
+}
+.forms #aluno_nome span, .forms #curso_nome span, .forms #bimestre_nome span {
+  font-weight: normal;
+  padding: 5px 5px 5px 0px;
+}
+
+#form_add_feedback_bimestral #div_select_aluno, #form_add_feedback_bimestral #div_select_curso, #form_add_feedback_bimestral #div_select_bimestre {
+  display: none;
+}
+#form_add_feedback_bimestral #aluno_nome, #form_add_feedback_bimestral #curso_nome, #form_add_feedback_bimestral #bimestre_nome {
+  width: auto !important;
+  max-width: 100% !important;
+  flex-grow: 1;
+}
+#form_add_feedback_bimestral #div_observacao {
+  margin-top: 10px;
+  padding: 0px;
+  flex-grow: 1;
+  min-width: 100%;
+}
+
 #form_add_curso select > option:disabled {
   background: #ffc;
 }
@@ -520,18 +548,6 @@ dialog {
 }
 #form_add_aula #select_categoria {
   display: none;
-}
-#form_add_aula #aluno_nome, #form_add_aula #curso_nome {
-  margin-top: 10px;
-  padding: 10px 10px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  font-weight: bold;
-  width: 50%;
-}
-#form_add_aula #aluno_nome span, #form_add_aula #curso_nome span {
-  font-weight: normal;
-  padding: 5px 5px 5px 0px;
 }
 #form_add_aula #div_select_aluno {
   display: none;
@@ -988,12 +1004,47 @@ input:disabled, textarea:disabled {
   grid-template-columns: 1fr 1fr 1fr;
   padding: 10px;
 }
+#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral {
+  padding: 10px;
+  margin-top: 10px;
+  grid-column: 1/4;
+  min-width: 100%;
+  border: 1px solid #ccc;
+  display: flex;
+  flex-wrap: wrap;
+  flex: 100% 50% 50%;
+  align-items: center;
+  justify-content: space-between;
+}
+#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral p {
+  padding: 5px;
+  flex-grow: 1;
+}
+#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral .btn_add_feedback_bimestral {
+  max-height: 35px;
+  border: 1px solid #245da7;
+  padding: 5px 10px;
+  color: #245da7;
+  background: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 10px 5px;
+  float: right;
+}
+#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral .btn_add_feedback_bimestral:hover {
+  background: #ffe;
+}
 #controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre p {
   width: auto;
   padding: 5px;
   box-shadow: 0px 0px 0px 1px #ccc;
 }
-#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre span {
+#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .label {
+  width: 100%;
+  flex-grow: 1;
+  font-size: 14px;
+}
+#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre span.values {
   font-weight: bold;
 }
 #controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback {
