--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -282,16 +282,42 @@
         box-shadow: 0px 1px 1px #999;
 
        // border: 1px solid #f90;
-.resumo_bimestre{
-      background:#fff;
+  .resumo_bimestre{
       width:100%;
-      display: grid;
       grid-gap: 1px;
-      grid-template-columns: 1fr 1fr 1fr;
+      display:flex;
+      flex-wrap: wrap;
+
       padding:10px;
+      border:$border-set-default;
+    .row{
+      min-width:100%;
+      display:flex;
+      flex-wrap: wrap;
+
+      p{
+        min-width: 150px;
+        flex-grow: 1;
+        width:auto;
+        padding:5px;
+        box-shadow: 0px 0px 0px 1px #ccc;  
+        background:#fafafa;
+
+      }
+      .label{
+        width:100%;
+        flex-grow: 1;
+        font-size:14px;
+      }
+      span.values{
+        font-weight: bold;
+      }
+       
+
+    }
       .feedback_bimestral{
         padding:10px;
-      margin-top:10px;
+        margin-top:10px;
         grid-column: 1 / 4;
         min-width:100%;
         border:1px solid #ccc;
@@ -300,9 +326,14 @@
         flex: 100% 50% 50%;
         align-items: center;
         justify-content: space-between;
+        background:#fafafa;
     
         p{ padding:5px;
-flex-grow: 1;
+        flex-grow: 1;
+
+        }
+        .feedback_value{
+          min-height:30px;
         }
         .btn_add_feedback_bimestral{
           max-height: 35px;
@@ -319,25 +350,9 @@ flex-grow: 1;
           }
         }
       }
- 
-      p{
-        width:auto;
-        padding:5px;
-        box-shadow: 0px 0px 0px 1px #ccc;  
-      }
-      .label{
-        width:100%;
-        flex-grow: 1;
-        font-size:14px;
-      }
-      span.values{
-        font-weight: bold;
-      }
-        .feedback{
-          grid-column: 1 / 4; 
-          width:100%;
-        }
-     }
+   
+  }
+
         h2 {
           font-weight: normal;
           flex-basis: 100%;
