--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -997,12 +997,33 @@ input:disabled, textarea:disabled {
   box-shadow: 0px 1px 1px #999;
 }
 #controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre {
-  background: #fff;
   width: 100%;
-  display: grid;
   grid-gap: 1px;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
   padding: 10px;
+  border: 1px solid #ccc;
+}
+#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .row {
+  min-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .row p {
+  min-width: 150px;
+  flex-grow: 1;
+  width: auto;
+  padding: 5px;
+  box-shadow: 0px 0px 0px 1px #ccc;
+  background: #fafafa;
+}
+#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .row .label {
+  width: 100%;
+  flex-grow: 1;
+  font-size: 14px;
+}
+#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .row span.values {
+  font-weight: bold;
 }
 #controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral {
   padding: 10px;
@@ -1015,10 +1036,14 @@ input:disabled, textarea:disabled {
   flex: 100% 50% 50%;
   align-items: center;
   justify-content: space-between;
+  background: #fafafa;
 }
 #controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral p {
   padding: 5px;
   flex-grow: 1;
+}
+#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral .feedback_value {
+  min-height: 30px;
 }
 #controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral .btn_add_feedback_bimestral {
   max-height: 35px;
@@ -1033,23 +1058,6 @@ input:disabled, textarea:disabled {
 }
 #controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral .btn_add_feedback_bimestral:hover {
   background: #ffe;
-}
-#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre p {
-  width: auto;
-  padding: 5px;
-  box-shadow: 0px 0px 0px 1px #ccc;
-}
-#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .label {
-  width: 100%;
-  flex-grow: 1;
-  font-size: 14px;
-}
-#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre span.values {
-  font-weight: bold;
-}
-#controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback {
-  grid-column: 1/4;
-  width: 100%;
 }
 #controle_aula #aluno_content .bg_bimestres .bimestres h2 {
   font-weight: normal;
