--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1001,8 +1001,6 @@ input:disabled, textarea:disabled {
   grid-gap: 1px;
   display: flex;
   flex-wrap: wrap;
-  padding: 10px;
-  border: 1px solid #ccc;
 }
 #controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .row {
   min-width: 100%;
@@ -1027,7 +1025,8 @@ input:disabled, textarea:disabled {
 }
 #controle_aula #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral {
   padding: 10px;
-  margin-top: 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
   grid-column: 1/4;
   min-width: 100%;
   border: 1px solid #ccc;
