--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -1,6 +1,10 @@
 @use 'base';
 @use 'abstracts' as *;
-@use 'controle_aula/controle_aula.scss';
+@use 'controle_aula';
+
+
+@use 'elements/header_admin.scss';
+@use 'elements/main_menu_lateral_admin.scss';
 
 //Components
 //Controle Aula
@@ -34,23 +38,7 @@ body {
   font-family: $font-stack;
   position:relative;
 }
-header {
-  grid-area: header;
-  background: #333;
-  border-bottom:2px solid #ccc;
-  width: 100%;
-  #header_center {
-    height: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0px auto;
-    padding: 0px $padding-heavy;
-    max-width: $container-width;
 
-
-  }
-}
 
 #app{
   max-width: 100%;
@@ -63,45 +51,7 @@ grid-template-columns: 250px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   'aside  footer footer footer footer footer footer footer';
 }
 
-aside#bg_main_menu_lateral{
-  
-    figure#bg_logo {
-      padding:20px;
-      max-width: 100%;
-     height:auto;
-      overflow:hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
 
-      img {
-        max-width: 150px;
-        max-height: 100%;
-        
-      }
-    }
-  grid-area: aside; 
-  background:#222;
-  nav {
-    margin-top:40px;
-    ul li {
-      clear:both;
-      a {
-        padding: 13px 15px;
-        color: #fafafa;
-        height: auto;
-        font-size: 14px;
-        width:100%;
-        display: block;
-
-        &:hover {
-          color: lighten($primary-color, 30%);
-          background:#333;
-        }
-      }
-    }
-  }
-}
 #block_screen_msg{
   position: absolute;
   min-height: 100vh;
