--- a/src/assets/css/sass/controle_aula/_forms.scss
+++ b/src/assets/css/sass/controle_aula/_forms.scss
@@ -1,7 +1,7 @@
 @use "../abstracts" as *; 
 dialog{
     margin: 0 auto;
-    padding: 20px;
+    padding: $padding-medium;
   }
   
 .forms{
@@ -27,14 +27,13 @@ dialog{
   
     #aluno_nome, #curso_nome, #bimestre_nome{
       margin-top:10px;
-      padding:10px 10px;
+      padding:$padding-light;
       font-size: 16px;
       border:1px solid #ccc;
       font-weight: bold;
       width:50%;
       span{
       font-weight: normal;
-  
         padding:5px 5px 5px 0px;
       }
     }
@@ -46,8 +45,8 @@ dialog{
     clear:both;
     display:none;
   }
+  /*
   #nav_forms_add{
-    background:#f90;
     padding:5px;
     display:flex;
     li{list-style: none;
@@ -56,11 +55,13 @@ dialog{
     a{
       padding:$padding-extra-light;
       color: $primary-color;
-      background: #ddd;
+      background: #f90;
       text-decoration: none;
     }
   }
   
+*/
+   
     input[type=submit]:disabled {
     background:#999 !important;
   }
