--- a/src/assets/css/sass/abstracts/_buttons.scss
+++ b/src/assets/css/sass/abstracts/_buttons.scss
@@ -10,21 +10,18 @@
     margin:5px;
     border:0px;
     cursor:pointer;
-       
     svg {
         max-width: 100px;
         max-height: 100px;
         height: auto;
         width: 20px;
     }
-    
 }
 
 .btn-default{
     @extend .btn;
    @include set-background-text-color(#f0f0f0);
    border:1px solid #666;
-
 }
 
 .btn-default-delete{
@@ -33,16 +30,21 @@
    border:1px solid rgb(82, 4, 4);
    &:hover {
     background: rgb(252, 70, 70);
-}
-
+    }
 }
 
 .btn-primary{
-    @extend .btn;
+   @extend .btn;
    @include set-background-text-color($primary-color);
-   
 }
 .btn-secondary{
     @extend .btn;
     @include set-background-text-color($primary-color);
 }
+
+.btn-default-cancel{
+    background: #ccc;
+    &:hover{
+      background:#ddd;
+    }
+  }
