--- a/src/assets/css/sass/controle_aula/_form_add_aluno.scss
+++ b/src/assets/css/sass/controle_aula/_form_add_aluno.scss
@@ -1,10 +1,12 @@
+@use "../abstracts" as *;
+
 #form_add_aluno{
     #add_aluno_ra{
       text-transform: uppercase;
     }
     .blocked{
-      border: 1px solid red;
-      background:rgb(250, 211, 211);
+      border: 1px solid $red-color-tone;
+      background: $red-light-color;
     }
    
    div{
