--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -419,6 +419,13 @@ template {
   box-shadow: inset 0px 1px 3px #122e53;
 }
 
+.btn-default-cancel {
+  background: #ccc;
+}
+.btn-default-cancel:hover {
+  background: #ddd;
+}
+
 inputs, .input-primary {
   border: 1px solid #ccc;
   padding: 5px;
@@ -499,7 +506,6 @@ inputs, .input-primary {
 }
 
 #form_add_aula {
-  transition: all 2s;
   border: 2px solid #2d74d1;
   box-shadow: 0px 1px 1px #222;
   height: auto;
@@ -522,11 +528,13 @@ inputs, .input-primary {
 #form_add_aula #div_detalhes {
   min-height: 50px;
 }
-#form_add_aula #div_tema, #form_add_aula #div_detalhes {
+#form_add_aula #div_tema,
+#form_add_aula #div_detalhes {
   width: 100%;
   flex-grow: 1;
 }
-#form_add_aula #div_data, #form_add_aula #div_horario {
+#form_add_aula #div_data,
+#form_add_aula #div_horario {
   max-width: 50%;
 }
 #form_add_aula #select_categoria {
@@ -542,7 +550,7 @@ inputs, .input-primary {
   display: none;
 }
 #form_add_aula #select_aula option[disabled=true] {
-  background: #eec;
+  background: #f6f6e0;
 }
 #form_add_aula #div_status_aula label {
   position: relative;
@@ -568,13 +576,13 @@ inputs, .input-primary {
   margin-right: 5px;
   position: relative;
   top: 1px;
-  border: 1px solid #c9c9c9;
+  border: 1px solid #ccc;
 }
 #form_add_aula #div_status_aula label input:checked {
-  background: #4082c0;
+  background: #245da7;
 }
 #form_add_aula #div_status_aula label:hover {
-  background: #ddd;
+  background: #ccc;
 }
 #form_add_aula #div_status_aula .actived_label_aula_concluida {
   background: #cec !important;
@@ -586,13 +594,13 @@ inputs, .input-primary {
   background: #fcc !important;
 }
 #form_add_aula #div_status_aula .actived_label_aula_com_falta input:checked {
-  background: #c0405c;
+  background: #fee;
 }
 #form_add_aula #div_status_aula .actived_label_aula_remarcada {
   background: #cde !important;
 }
 #form_add_aula #div_status_aula .actived_label_aula_remarcada input:checked {
-  background: #4082c0;
+  background: #ddd;
 }
 #form_add_aula #bg_prova_inputs {
   width: 100%;
@@ -619,7 +627,8 @@ inputs, .input-primary {
   border: 1px solid #bbb;
   border-right: 0px;
 }
-#form_add_aula #bg_prova_inputs input, #form_add_aula #bg_prova_inputs textarea {
+#form_add_aula #bg_prova_inputs input,
+#form_add_aula #bg_prova_inputs textarea {
   min-width: auto;
   height: 30px;
   max-height: auto;
@@ -723,9 +732,10 @@ nav.nav_cursos_aluno ul li a:active {
   background: #f6f6e0;
 }
 nav.nav_cursos_aluno ul li .active {
-  background: #ffe;
+  background: #f6f6e0;
   color: #333;
 }
+
 #aluno_content {
   border-radius: 5px 5px 0px 0px;
   border: 1px solid #ccc;
@@ -753,7 +763,7 @@ nav.nav_cursos_aluno ul li .active {
   width: auto;
 }
 #aluno_content .btn_add_aula:hover {
-  background: #ffe;
+  background: #f6f6e0;
 }
 #aluno_content .btn_add_aula:active {
   box-shadow: inset 0px 0px 3px #111;
@@ -764,7 +774,7 @@ nav.nav_cursos_aluno ul li .active {
   border-color: #8971cc;
 }
 #aluno_content .btn_add_reposicao:hover {
-  background: #e7e7ff;
+  background: #e7e2f4;
 }
 #aluno_content .btn_add_ponto_extra {
   float: left;
@@ -772,7 +782,7 @@ nav.nav_cursos_aluno ul li .active {
   border-color: #779214;
 }
 #aluno_content .btn_add_ponto_extra:hover {
-  background: #edffcf;
+  background: #edf7c7;
 }
 #aluno_content .bg_curso {
   position: relative;
@@ -816,7 +826,7 @@ nav.nav_cursos_aluno ul li .active {
   justify-content: center;
   flex-wrap: wrap;
   overflow: hidden;
-  background: #ffd;
+  background: #f6f6e0;
   align-items: center;
 }
 #aluno_content .bg_info_delete_curso p {
@@ -920,7 +930,7 @@ nav.nav_cursos_aluno ul li .active {
   float: right;
 }
 #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral .btn_add_feedback_bimestral:hover {
-  background: #ffe;
+  background: #f6f6e0;
 }
 #aluno_content .bg_bimestres .bimestres h2 {
   font-weight: normal;
@@ -949,7 +959,7 @@ nav.nav_cursos_aluno ul li .active {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  background: #f2f8f3;
+  background: #f4fade;
 }
 #aluno_content .bg_bimestres .bimestres .column_pontos_extras .aulas {
   width: auto;
@@ -959,10 +969,10 @@ nav.nav_cursos_aluno ul li .active {
 }
 #aluno_content .bg_bimestres .bimestres .aulas {
   position: relative;
-  margin: 10px;
+  margin: 10px 20px;
   width: auto;
   max-width: 300px;
-  background: #ffffff;
+  background: #fff;
   height: 80px;
   border: 1px solid #466cb3;
   overflow: hidden;
@@ -998,21 +1008,21 @@ nav.nav_cursos_aluno ul li .active {
 }
 #aluno_content .bg_bimestres .bimestres .aula_falta {
   background: #fee;
-  border-color: #a34444;
+  border-color: #ff8888;
 }
 #aluno_content .bg_bimestres .bimestres .aula_remarcada {
   background: #ddd;
-  border-color: #6a7580;
+  border-color: #919191;
 }
 #aluno_content .bg_bimestres .bimestres [data-aula_categoria=reposição] {
-  background: #f3eeff !important;
-  border: 1px solid #666;
+  background: #e7e2f4 !important;
+  border: 1px solid #8971cc;
   width: auto;
   flex-grow: 1;
   flex-shrink: 1;
 }
 #aluno_content .bg_bimestres .bimestres [data-aula_categoria="ponto extra"] {
-  background: #ecfcb4 !important;
+  background: #e6f4b1 !important;
   border: 1px solid #666;
   height: 30px;
   max-height: 180px !important;
@@ -1021,7 +1031,7 @@ nav.nav_cursos_aluno ul li .active {
   height: 110px;
 }
 #aluno_content .bg_bimestres .bimestres [data-aula_categoria=prova] {
-  background: #d8e4fd !important;
+  background: #d4e3f6 !important;
 }
 #aluno_content .bg_bimestres .bimestres [data-aula_categoria=prova] .aula_detalhes {
   height: 110px;
@@ -1039,7 +1049,7 @@ nav.nav_cursos_aluno ul li .active {
   color: #444;
 }
 #aluno_content .bg_bimestres .bimestres .btn_deletar_aula:hover {
-  background: #f9f0f0;
+  background: #fee;
   color: #db1e1e;
 }
 #aluno_content .bg_bimestres .bimestres .btn_deletar_aula svg {
@@ -1052,11 +1062,10 @@ nav.nav_cursos_aluno ul li .active {
   cursor: pointer;
 }
 #aluno_content .bg_bimestres .bimestres .btn_edit_aula:hover {
-  background: #f9f0f0;
+  background: #fafafa;
   color: #245da7;
 }
 #aluno_content .bg_bimestres .bimestres .btn_edit_aula:active {
-  background: #f9f0f0;
   color: #1b467d;
 }
 #aluno_content .bg_bimestres .bimestres .btn_open_close_aulas {
@@ -1079,7 +1088,7 @@ nav.nav_cursos_aluno ul li .active {
   color: #fff;
 }
 #aluno_content .bg_bimestres .bimestres .btn_open_close_aulas:active {
-  background: #aa9;
+  background: #4182d6;
   user-select: none;
 }
 
@@ -1156,8 +1165,8 @@ input:disabled, textarea:disabled {
   text-transform: uppercase;
 }
 #form_add_aluno .blocked {
-  border: 1px solid red;
-  background: #fad3d3;
+  border: 1px solid #db1e1e;
+  background: #fee;
 }
 #form_add_aluno div #ra {
   max-width: 20px;
@@ -1187,8 +1196,8 @@ input:disabled, textarea:disabled {
 }
 
 .edit_form {
-  background: #ffffff !important;
-  border: 2px solid #6a8acf;
+  background: #fff !important;
+  border: 2px solid #245da7;
 }
 .edit_form div label {
   background: transparent !important;
@@ -1199,7 +1208,7 @@ input:disabled, textarea:disabled {
 }
 .edit_form .disabled {
   position: relative;
-  color: grey;
+  color: #ddd;
 }
 .edit_form .disabled:after {
   position: absolute;
@@ -1354,19 +1363,6 @@ body {
   padding: 10px;
   margin-bottom: 10px;
   border-bottom: 1px solid #ccc;
-}
-.confirm_box .btn_deletar {
-  background: #e63d3d;
-  color: #fff;
-}
-.confirm_box .btn_deletar:hover {
-  background: red;
-}
-.confirm_box .btn_cancelar {
-  background: #ccc;
-}
-.confirm_box .btn_cancelar:hover {
-  background: #ddd;
 }
 .confirm_box button {
   border: 1px solid #ccc;
